refactor habit schemas
