# server/src/api/habits/schemas/createHabitSchema.ts
@@ -1,26 +1,3 @@
-const getHabitSchema = {
-   operationId: 'getAllHabits',
-   tags: ['habits'],
-   response: {
-      200: {
-         type: 'object',
-         properties: {
-            name: { type: 'string' },
-            id: { type: 'number' },
-            description: { type: 'string' },
-            category: { type: 'string' },
-            trackingStartDate: {
-               type: 'string',
-               format: 'date',
-            },
-            repeatDays: {
-               type: 'array',
-            },
-         },
-      },
-   },
-} as const;
-
 const createHabitSchema = {
    tags: ['habits'],
    operationId: 'createHabit',
@@ -63,18 +40,4 @@ const createHabitSchema = {
    },
 } as const;
 
-const deleteHabitSchema = {
-   operationId: 'deleteHabit',
-   tags: ['habits'],
-   params: {
-      type: 'object',
-      properties: {
-         habitId: {
-            type: 'number',
-         },
-      },
-      required: ['habitId'],
-   },
-} as const;
-
-export { deleteHabitSchema, createHabitSchema, getHabitSchema };
+export default createHabitSchema;
