# server/src/api/habits/schemas/deleteHabitSchema.ts
@@ -1,0 +1,15 @@
+const deleteHabitSchema = {
+   operationId: 'deleteHabit',
+   tags: ['habits'],
+   params: {
+      type: 'object',
+      properties: {
+         habitId: {
+            type: 'number',
+         },
+      },
+      required: ['habitId'],
+   },
+} as const;
+
+export default deleteHabitSchema;
